# study-rustworkspace

./: .gitignore  Cargo.toml  LICENSE  README.md
advanced/src/: main.rs
branches/src/: main.rs
collections/src/: main.rs
concurrencies/: Cargo.toml
concurrencies/src/: main.rs
controls/: Cargo.toml
crates/src/: lib.rs
crates/src/back_of_house/: mod.rs
crates/src/front_of_house/: hosting.rs  serving.rs
errors/: Cargo.toml  hello.txt
errors/src/: main.rs
functional/src/: main.rs
functions/src/: main.rs
generics/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
matches/: Cargo.toml
matches/src/: main.rs
mini_grep/: Cargo.toml
mini_grep/src/: lib.rs  main.rs
objects/src/: main.rs
ownership/src/: main.rs
pointers/src/: main.rs
rectangles/src/: main.rs
structure/: Cargo.toml
structure/src/: main.rs
tests/src/: lib.rs
tests/tests/: integration_test.rs
variables/src/: main.rs
